# pythinder

./: .gitignore  README.md  buildozer.spec  hot_reload.py  main.py  pyproject.toml
app/: pythinder.kv  pythinder.py
